--- a/proto/stu3/BUILD
+++ b/proto/stu3/BUILD
@@ -2,6 +2,8 @@ package(default_visibility = ["//visibility:public"])
 
 licenses(["notice"])
 
+load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
+
 proto_library(
     name = "datatypes",
     srcs = [
@@ -20,6 +22,19 @@ java_proto_library(
     deps = [":datatypes"],
 )
 
+go_proto_library(
+    name = "descriptor_go_proto",
+    importpath = "github.com/golang/protobuf/protoc-gen-go/descriptor",
+    proto = "@com_google_protobuf//:descriptor_proto",
+)
+
+go_proto_library(
+    name = "datatypes_go_proto",
+    proto = ":datatypes",
+    importpath = "github.com/google/fhir/proto/stu3/datatypes",
+    deps = ["descriptor_go_proto"],
+)
+
 proto_library(
     name = "resources_proto",
     srcs = [
@@ -34,6 +49,13 @@ java_proto_library(
     name = "resources_java_proto",
     strict_deps = 0,
     deps = [":resources_proto"],
+)
+
+go_proto_library(
+    name = "resources_go_proto",
+    proto = ":resources_proto",
+    importpath = "github.com/google/fhir/proto/stu3/resources",
+    deps = [":datatypes_go_proto"],
 )
 
 proto_library(
@@ -53,6 +75,13 @@ java_proto_library(
     name = "extensions_java_proto",
     strict_deps = 0,
     deps = [":extensions"],
+)
+
+go_proto_library(
+    name = "extensions_go_proto",
+    proto = ":extensions",
+    importpath = "github.com/google/fhir/proto/stu3/extensions",
+    deps = [":datatypes_go_proto"],
 )
 
 # We also make the .proto files readable for testing.
